switched to secrets

--- a/.github/workflows/env-and-secrets.yml
+++ b/.github/workflows/env-and-secrets.yml
@@ -1,16 +1,17 @@
 name: Environment and Secrets
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.test.mongodb.net
-      MONGODB_USERNAME: testusername
-      MONGODB_PASSWORD: TESTPASSWORD
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
