--- a/.github/workflows/env-and-secrets.yml
+++ b/.github/workflows/env-and-secrets.yml
@@ -4,10 +4,12 @@ on:
   # push:
   #   branches:
   #     - main
+  #     - dev
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
+    environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.test.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
